# manifold

./: LICENSE  README.md  pyproject.toml
data/: wranling.ipynb
data/features/: dropped_features_description.json  filtered_features_description.json
data/raw/: dict.xlsx  ~$dict.xlsx
mlruns/0/: meta.yaml
