[tool.poetry]
name = "manifold"
version = "0.1.0"
description = ""
authors = ["Gabriel Fuentes <gafnts@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
mlx = "^0.15.2"
optuna = "^3.6.1"
mlflow = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
